infra/tailscale-ingress/argocd-ingress.yaml
apiVersion: tailscale.com/v1alpha1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  class: tailscale
  tls:
    hosts:
      - argocd-au
  rules:
    - host: argocd-au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
