infra/tailscale-ingress/longhorn-ingress.yaml
apiVersion: tailscale.com/v1alpha1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  class: tailscale
  tls:
    hosts:
      - longhorn-au
  rules:
    - host: longhorn-au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
